@@ -4,8 +4,15 @@ lazy val root = project
   .in(file("."))
   .settings(
     name := "scalafx-test",
+    scalacOptions ++= Seq(
+      "-Wconf:msg=Implicit parameters should be provided with a `using` clause:s",
+      "-deprecation",
+      "-explain",
+      "-feature",
+      "-unchecked"
+    ),
 
-    scalacOptions += "-Wconf:msg=Implicit parameters should be provided with a `using` clause:s",
+    javaOptions ++= Seq("-XX:+EnableDynamicAgentLoading"),
 
     // Aktuelle ScalaFX (für JavaFX 21)
     libraryDependencies ++= Seq(
@@ -14,7 +21,13 @@ lazy val root = project
       "org.scalatest" %% "scalatest" % "3.2.18" % Test,
       "com.lihaoyi" %% "upickle" % "4.0.0",
       "com.lihaoyi" %% "os-lib" % "0.9.1",
-      "org.scalafx" %% "scalafx" % "20.0.0-R31"
+      "org.scalafx" %% "scalafx" % "20.0.0-R31",
+      "com.google.inject" % "guice" % "7.0.0",
+      "net.codingwell" %% "scala-guice" % "7.0.0",
+      "com.typesafe.play" %% "play-json" % "2.10.0",
+      "org.scala-lang.modules" %% "scala-xml" % "2.4.0",
+      "org.scalatestplus" %% "mockito-4-11" % "3.2.18.0" % Test,
+      "org.mockito" % "mockito-core" % "5.11.0" % Test
     ),
     libraryDependencies ++= {
       val os = System.getProperty("os.name").toLowerCase match {
